# flipperzero-tool

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  package-lock.json  package.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
docs/: FEATURE-DRAGDROP.md  FEATURE-EDITOR.md  FEATURE-PROTOBUS.md  FEATURE-REVERSE-ENGINEER.md
frontend/: package-lock.json  package.json
frontend/src/: App.tsx  index.css
frontend/src/components/: DevicePanel.tsx  EditorPanel.tsx  FapProjectManager.tsx  FileDiffViewer.tsx  FilePreview.tsx  FileTable.tsx  IrDatabase.tsx  IrViewer.tsx  NewFileModal.tsx  NfcAnalyzerAdvanced.tsx  NfcViewer.tsx  ReverseEngineerPanel.tsx  SerialPanel.tsx  SubGhzViewer.tsx  SubGhzViewerAdvanced.tsx  UfbtPanel.tsx
frontend/src/components/editor/: CodeMirrorEditor.tsx
frontend/src/hooks/: useDirectory.ts  useDragDrop.ts  useEditor.ts  useFileActions.ts
frontend/src/services/: tauri.ts
scripts/: _deploy_and_test.py  _fix_and_test.py  _fix_dist.py  _npm_install.py  _test_runner.py  _typecheck.py  deploy.py  deploy2.py
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/proto/: flipper.proto
src-tauri/python/: parsers.py
src-tauri/src/: commands.rs  errors.rs  lib.rs  main.rs  parsers.rs  proto_bus.rs  reverse_engineer.rs  serial.rs  ufbt.rs  vfs.rs
src-tauri/src/serial/: connection.rs  mod.rs  proto.rs
src-tauri/tests/: integration_tests.rs  test_commands.rs  test_parsers_edge.rs  test_serial.rs  test_ufbt.rs
tests/: test_parsers.py
(+3 files in other folders)
